# OPP

./: InputA.txt  Inputb.txt
Lab1/: .gitignore  Matrix.c  Matrix.h
Lab1/v1.0 without MPI/: NCGM.c  NCGM.h  lab1_0.c
Lab1/v1.1 with MPI, duplicated x and b/: NCGMP.c  NCGMP.h  lab1_1.c
Lab1/v1.2 with MPI, all-cut/: NCGMP.c  NCGMP.h  lab1_2.c
Lab1/v1_0_without_MPI/: CMakeLists.txt  NCGM.c  NCGM.h  lab1_0.c
Lab1/v1_1_with_MPI_duplicated_x_and_b/: CMakeLists.txt  NCGMP.c  NCGMP.h  lab1_1.c
Lab1/v1_2_with_MPI_all-cut/: CMakeLists.txt  NCGMP.c  NCGMP.h  lab1_2.c
Lab2/Lab_2_1/OMP FOR/: CMakeLists.txt
Lab2/Lab_2_1/OMP_FOR/: CMakeLists.txt  Matrix.c  Matrix.h  NCGM.c  test.sh
Lab2/Lab_2_2/OMP PARALLEL/: CMakeLists.txt  Matrix.c  NCGM.h  lab2_2.c
Lab2/Lab_2_2/OMP_PARALLEL/: CMakeLists.txt  Matrix.c  NCGM.c
Lab3/: CMakeLists.txt  Matrix.c  Matrix.h  ParallelMultiplication.c  ParallelMultiplication.h  lab3.c
Lab4/: BoolMatrix.c  BoolMatrix.h  CMakeLists.txt  LifeGameParallel.c  LifeGameParallel.h  main.c
Lab5/: CMakeLists.txt  main.c
v1_0_without_MPI/: CMakeLists.txt  NCGM.c
v1_1_with_MPI_duplicated_x_and_b/: CMakeLists.txt  NCGMP.c  NCGMP.h  lab1_1.c
v1_2_with_MPI_all-cut/: CMakeLists.txt  NCGMP.c  NCGMP.h  lab1_2.c
